--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.2",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/axios": "^0.9.36",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
